# AxI-itinerary

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.github/workflows/: ci.yml
backend/src/: lib.rs
backend/src/models/: budget.rs  packing.rs  timeline.rs
docs/: prd.md  table_design.md
docs/prd/: v0.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vitest.config.ts
frontend/src/: app.css  app.d.ts  app.html  app_old.css
frontend/src/lib/: utils.ts  wasm-utils.ts
frontend/src/lib/components/: AIChat.svelte  AddItemModal.svelte  AddItemModalBasic.svelte  AuthModal.svelte  Button.svelte  Header.svelte  Input.svelte  ItineraryThemeSelector.svelte  QuickAddModal.svelte  Textarea.svelte  ThemeSelector.svelte
frontend/src/lib/stores/: itinerary.ts  itineraryTheme.ts  theme.ts  themeStore.ts  timeline.ts  user.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/my-itineraries/: +page.svelte
frontend/src/styles/: ITINERARY_THEMES.md  README.md  components.css  examples.html
frontend/src/styles/themes/: dark.css  itinerary-business.css  itinerary-city.css  itinerary-minimalist.css  itinerary-mountain.css  itinerary-nature.css  seaside.css  (+4 more)
frontend/static/: manifest.json  sw.js
frontend/static/icons/: generate.html
migrations/: 001_create_tables.sql  002_create_indexes.sql  003_create_users.sql  004_add_timezone_to_users.sql  005_remove_timezone_from_users.sql
wasm/: Cargo.toml
wasm/src/models/: chat.rs  itinerary.rs  mod.rs
(+18 files in other folders)
