[package]
name = "axi-itinerary-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
